manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny-httpd
  namespace: test-gitops
spec:
  selector:
    app: tiny-httpd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
