manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tiny-httpd
  namespace: test-gitops
spec:
  to:
    kind: Service
    name: tiny-httpd
  port:
    targetPort: 8080
